--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ."
+    "dev": "nodemon .",
+    "start": "node ."
   },
   "dependencies": {
     "body-parser": "^1.20.0",
